# AIS-catcher

./: .gitignore  .typos.toml  AIS-catcher.h  AIS.cpp  AIS.h  ARCHITECTURE.md  CMakeLists.txt  Common.h  DSP.cpp  DSP.h  Demod.cpp  Demod.h  Device.cpp  Device.h  DeviceAIRSPY.cpp  DeviceAIRSPY.h  DeviceAIRSPYHF.cpp  DeviceAIRSPYHF.h  DeviceFileRAW.cpp  DeviceFileRAW.h  DeviceFileWAV.cpp  DeviceFileWAV.h  DeviceHACKRF.cpp  DeviceHACKRF.h  DeviceRTLSDR.cpp  DeviceRTLSDR.h  DeviceRTLTCP.cpp  DeviceRTLTCP.h  DeviceSDRPLAY.cpp  DeviceSDRPLAY.h  Dockerfile  FFT.cpp  FFT.h  FIFO.h  Filters.h  IO.cpp  IO.h  LICENSE  Main.cpp  Makefile  (+22 more)
.github/workflows/: aiscat-release.yml  auto-bake  auto-bake.yml  build-managed.yml  build.yml  build_arm64.yml  container.yml  macos.yml  msbuild-test  msbuild.yml  msbuildsdrplay.yml
Application/: AIS-catcher.h  Config.cpp  Config.h  DeviceManager.h  Main.cpp  MapTiles.cpp  MapTiles.h  Prometheus.cpp  Prometheus.h  Receiver.cpp  Receiver.h  WebClient.cpp  WebClient.h  WebDB.cpp  WebViewer.cpp  WebViewer.h  version.h
Aviation/: ADSB.cpp  ADSB.h  Beast.h
Backup/: index.html
DBMS/: PostgreSQL.cpp  PostgreSQL.h  create.sql
DSP/: DSP.cpp  DSP.h  Demod.cpp  Demod.h  FFT.h  Filters.h  Model.cpp  Model.h
Device/: AIRSPY.cpp  AIRSPY.h  AIRSPYHF.cpp  AIRSPYHF.h  Device.h  FIFO.h  FileRAW.cpp  FileRAW.h  FileWAV.cpp  FileWAV.h  HACKRF.cpp  HACKRF.h  N2KSCAN.cpp  N2KSCAN.h  N2KsktCAN.cpp  N2KsktCAN.h  RTLSDR.cpp  RTLSDR.h  RTLTCP.cpp  RTLTCP.h  SDRPLAY.cpp  SDRPLAY.h  Serial.cpp  Serial.h  SoapySDR.cpp  SoapySDR.h  SpyServer.cpp  SpyServer.h  UDP.cpp  UDP.h  ZMQ.cpp  ZMQ.h
Documentation/: README-grafana.md
Edge/: readme.txt
EdgePlugins/: README.md
HTML/: HTML.cpp  HTML_local.cpp  HTML_test.cpp  WebDB.cpp  WebDB.h  bake  favicon.cpp  index.html  index_html.cpp  index_local.html  index_local_html.cpp  m  readme.txt  script.js  script_js.cpp  style.css  style_css.cpp  web_db.cpp
IO/: HTTPClient.cpp  HTTPClient.h  HTTPServer.cpp  HTTPServer.h  IO.cpp  IO.h  MsgOut.cpp  MsgOut.h  N2KInterface.cpp  N2KInterface.h  N2KStream.cpp  N2KStream.h  NMEA2000.cpp  NMEA2000.h  Network.cpp  Network.h  Protocol.cpp  Protocol.h  Server.cpp  Server.h  StreamCounter.h
Input/: Device.h  DeviceAIRSPY.cpp  DeviceAIRSPY.h  DeviceAIRSPYHF.cpp  DeviceAIRSPYHF.h  DeviceFileRAW.cpp  DeviceFileWAV.cpp  DeviceFileWAV.h  DeviceHACKRF.cpp  DeviceHACKRF.h  DeviceRTLSDR.cpp  DeviceRTLSDR.h  DeviceRTLTCP.cpp  DeviceRTLTCP.h  DeviceSDRPLAY.cpp  DeviceSDRPLAY.h
JSON/: JSON.cpp  JSON.h  Keys.h  Parser.cpp  Parser.h  StringBuilder.cpp  StringBuilder.h
JSONAIS/: Keys.cpp  Keys.h
Marine/: Message.cpp  NMEA.cpp  NMEA.h
Output/: IO.h
Protocol/: Protocol.cpp  Protocol.h
Ships/: DB.cpp  DB.h  History.h  Ships.cpp  Ships.h  Statistics.h
Source/Application/: AIS-catcher.h  ApplicationContext.h  ApplicationState.cpp  ApplicationState.h  CLI.cpp  CLI.h  Config.cpp  Config.h  ControlCore.cpp  ControlCore.h  ControlServer.cpp  ControlServer.h  DeviceManager.cpp  DeviceManager.h  JSONConfig.cpp  JSONConfig.h  Main.cpp  ManagedMain.cpp  ManagedMain.h  MapTiles.cpp  Prometheus.cpp  Prometheus.h  Receiver.cpp  Receiver.h  RunState.h  WebDB.cpp  WebViewer.cpp  WebViewer.h
Source/Aviation/: ADSB.cpp  ADSB.h  Basestation.cpp  Basestation.h  Beast.cpp  Beast.h
Source/DBMS/: PostgreSQL.cpp  PostgreSQL.h  create.sql
Source/DSP/: DSP.cpp  DSP.h  Demod.cpp  Demod.h  FFT.h  Filters.h  Model.cpp  Model.h
Source/Device/: AIRSPY.cpp  AIRSPY.h  AIRSPYHF.cpp  AIRSPYHF.h  Device.h  FileRAW.cpp  FileRAW.h  FileWAV.cpp  FileWAV.h  HACKRF.cpp  HACKRF.h  HYDRASDR.cpp  HYDRASDR.h  N2KsktCAN.cpp  N2KsktCAN.h  RTLSDR.cpp  RTLSDR.h  RTLTCP.cpp  RTLTCP.h  SDRPLAY.cpp  SDRPLAY.h  Serial.cpp  Serial.h  SoapySDR.cpp  SoapySDR.h  SpyServer.cpp  SpyServer.h  UDP.cpp  UDP.h  ZMQ.cpp  ZMQ.h
Source/HTML/: config-manager.js  index.html  index_local.html  schema.js  script.js  style.css  tailwind.css  vendor.css  vendor.js  webapp.html
Source/IO/: CommunityStreamer.cpp  CommunityStreamer.h  File.h  HTTPClient.cpp  HTTPClient.h  HTTPServer.cpp  HTTPServer.h  MsgOut.cpp  MsgOut.h  N2KInterface.cpp  N2KInterface.h  N2KInterface.plist  N2KStream.cpp  N2KStream.h  Network.cpp  Network.h  OutputStats.h  Protocol.cpp  Protocol.h  Screen.cpp  Screen.h  SocketUtil.h  StreamCounter.h  TCPServer.cpp  TCPServer.h
Source/JSON/: JSON.cpp  JSON.h  JSONAIS.cpp  JSONAIS.h  JSONBuilder.cpp  JSONBuilder.h  KeyDefs.h  Keys.cpp  Keys.h  Parser.cpp  Parser.h  StringBuilder.cpp  StringBuilder.h  Writer.h
Source/Marine/: AIS.cpp  AIS.h  Message.cpp  Message.h  MessageHistory.h  N2K.cpp  N2K.h  NMEA.cpp  NMEA.h
Source/Tracking/: DB.cpp  DB.h  History.h  PlaneDB.h  Ships.cpp  (+2 more)
Tracking/: DB.cpp  DB.h  History.h  PlaneDB.h  Ships.cpp  Ships.h  Statistics.h
Utilities/: Convert.cpp  Parse.cpp  Parse.h  StreamHelpers.cpp  StreamHelpers.h  TemplateString.cpp  TemplateString.h
debian/: control  postinst  postrm  preinst  rules
frontend/: build.sh  package-lock.json  package.json  vite.config.app.js  vite.config.js
media/: JSON types
msvc/: AIS-catcher RTLSDR.sln  AIS-catcher RTLSDR.vcxproj
plugins/: click_map_to_hide_info_card.pjs  dimension_in_feet.pjs  google_option.pjs  latlon_in_dms.pjs  maps_with_no_labels.pjs  marinetraffic_option.pjs  shipxplorer_option.pjs  show_trails_always.pjs  vesselfinder_option.pjs
python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
python/examples/: decode.py  from_norway.py  pretty_print.py  relay_binary.py  to_csv.py  to_kafka.py  to_mqtt.py
python/scripts/: gen_types.py  prepare_sdist.py
python/src/aiscat/: __init__.py  _core.cpp  types.py
python/tests/: test_decode.py  test_free_threading.py
readme/: configuration.md  features.md  installation.md  usage.md
scripts/: README.txt  ais_processor.sh  aiscatcher-config  aiscatcher-control  aiscatcher-install  aiscatcher-install-source  aiscatcher-install.sh  build-NMEA2000.sh  build-debian.sh  build-fedora.sh  build-html.sh  build-rpm.sh  build-web-db.sh  build.sh  site_generator.sh  sult.py  test-install-matrix.sh
(+90 files in other folders)
